Fix JEI issues